# prediction-market

./: Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yaml
auth-service/: Cargo.toml
auth-service/src/: lib.rs  symmetric.rs  token_services.rs  types.rs
db-service/: Cargo.toml
db-service/.sqlx/: query-0048c749d0f676be54a253b5f5328c973b0d99f409a4b1f44a1b8a5f7b3d7296.json  query-00628995f534a9af4d7b5ab52996bc692639d9761edf44c032d6f232cafccb7b.json  query-00a34082d07b048f6a3896c9c7a072d150eccf7c7fe120ab8ab776b9472651d7.json  query-04fa8122da964b68b286708f45161c8debafac07e215ac2211a30d1f30f56b39.json  query-078766668e1b7bd36636c7e3c64c51c045b0e4ffdf85e7e8bc6bab0f4af7e734.json  query-08045d3f744efbd3e6f8747462d59712c4516459c9487edd454b614ea817efee.json  query-0bbb16f5a8d180bc37440f015520c7b6b55e158e20f163e4d8bfc83dad3ef189.json  query-0c0da1d07e8ee93df8d0106452349215471ecf904c13c6fbb02dd570ea1d3b46.json  query-126d93ce90accbe94a61c79029dd3688d71f01d4c99a2407556ab3e0359608a9.json  query-1ce4a961cfc3f163a84dd141cb8c9f39e29cf0a8cce8f39107d7a15b164dc718.json  query-2b8906ee682eea9b1f7d853d45683f2ef7788c8e22df1949560e8df17d6ebda3.json  query-31ddd36d5b93a42bf4546aacf87b7dd44dfa5ab4bf7e360df4cab8f1efe921be.json  query-323fb248bb1d450b8f6ef7bd452e3ed222324466a199be9f4e591314dab2088b.json  query-34262f72c85a13eaea290d8b8e899f7f0f052f0711814a0543e23ca7f6e4158b.json  query-3bfce316c6c8494cb4e5b01eed2281381fb0691412c7e541bfc537a5ebe26d17.json  query-3e9155e2e77a97afdc3223b1097eacaf47a7f66ceb3f0c208ebad5498e0ca161.json  query-3eb003435cbc74857ee8a62961606df2b2395167d97162feb1da5a6e3917a998.json  query-40f0a86c3cdc21be1f89b2a1e245c5b6e0c2c5d2446d93be0c1cda0281d5c173.json  query-48676f4b4d9d2539ca87c1e40e52f9987a7f2653079da181d85a72b272aed66a.json  query-48ed730c8401984bab279e51fd5799a5700df6a03eb2a4f68922d9f0997c0610.json  query-5171d1988c06f5f3d397f307bf9e49e183f3d62a3fd95f96e038726d20803e28.json  query-55fe0a991672cb9453d10d9c983ce5c713986313218c18db618e5c7da6055902.json  query-5fbfe70282eb83f765436d940f8e5e20cf47491d64d7009947e65a353cbe28c6.json  query-63dd8bb2cee0614dc3654804c427bfefc9994355989b9d67e21080a39f157b5a.json  query-642c0b6d417a6efa81ba6023827218db644f06f8388fde2eaedb549db903b087.json  query-6763ad72e5391940b28ec759ec387a061c9ce43b8380fc8a0cdebb00e25b882a.json  query-68543e935cca6ee07b66e28069f65591fe6aeb344158e6ad06753c1c8342151f.json  query-709737066f0f137ac879b20423de2f8d663461645f439f227b18dd761c10aca3.json  query-7104bfe0c1310419c4ff8123d4005fa2debea2dafa1ac9db16b9aa11d72dbde0.json  query-82909d067c805d14921bb0f684c356ba87630172d7dd9696f36b4702a88500ad.json  query-97e3639b41dd060ae8fd19e1723673b0e3dddd0244247e2a6c6613629b54b6eb.json  query-9f7e847f5fbde3ce1ddf11405fc1e61da49561c303932f27c31e6a830019eceb.json  query-a61f481138c5dd3a4813898a86417359baf2b7b03de98a571ae9a105727091bd.json  query-a70acc6dfbecc1bbc77f29739c2781477d3d395e73b5ff5949e9c9328deabebd.json  query-b1e1a9a54e2119aa8c292d75bf89dc4d092fbcc05a959379ff85e8b61d22086d.json  query-b58adccaa0e1a2f86af4f63b0b42a75cb37195d38d157baf2467ab78595f38f5.json  query-b9df98b7c9a249daab03bbeda48f84fa934942e3e94256502b7bb26f31366f2c.json  query-ba9aa0bda9c1bc57f11f2cb5a3f90141082313e61a88ca206d4d33c75ccc687f.json  query-c3e359e8c2c0ab7587aa73a09dad06e06e20a2fbfa70d6605aa61d11dcd69b3d.json  query-df1190e518b69d2ea84d67fb3917e07ae2c1a6baec77c845739787c060619c30.json  (+4 more)
db-service/migrations/: 20250510140203_added_all_other_required_tables.sql  20250514123752_adding_default_value_to_order_outcome_table.sql
db-service/queries/: UserTable.sql  marketTable.sql  orders.sql  userHoldings.sql  user_trades.sql
db-service/src/: lib.rs
db-service/src/procedures/: mod.rs
db-service/src/schema/: enums.rs  market.rs  mod.rs  orders.rs  user_holdings.rs  user_trades.rs  user_transactions.rs  users.rs
db-service/src/utils/: macros.rs
grpc-service/: Cargo.toml  build.rs
grpc-service/proto/: markets.proto  price.proto
grpc-service/src/: main.rs  state.rs
grpc-service/src/procedures/: market_service.rs  market_services.rs  mod.rs  (+1 more)
order-service/: Cargo.toml
order-service/src/: kafka_admin.rs  main.rs  nats_handler.rs  order_book.rs  order_book_handler.rs  order_book_v2_handler.rs  state.rs  ws_handler.rs
service-api/: Cargo.toml  build.rs
service-api/proto/: markets.proto
service-api/src/: bloom_f.rs  lib.rs  main.rs  state.rs
websocket-service/: Cargo.toml
websocket-service/src/: main.rs  state.rs
(+144 files in other folders)
