[package]
name = "grpc-service"
version = "0.1.0"
edition = "2024"

[dependencies]
tonic = "0.13.1"
tonic-reflection = "0.13.1"
tonic-web = "0.13.1"
tower-http = { version = "0.6.6", features = ["cors"] }
prost = { workspace = true }
prost-types = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }


[build-dependencies]
tonic-build = "0.13.1"
