[package]
name = "order-service"
version = "0.1.0"
edition = "2024"

[dependencies]
utility-helpers = { path = "../utility-helpers" }
db-service = { path = "../db-service" }
async-nats = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }
dotenv = { workspace = true }
sqlx = { workspace = true }
futures-util = { workspace = true }
parking_lot = { version = "0.12.3" }
