[package]
name = "service-api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
db-service = { path = "../db-service" }
auth-service = { path = "../auth-service" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tower-http = { workspace = true }
sqlx = { workspace = true }
dotenv = { workspace = true }
