[package]
name = "websocket-service"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
tower = "0.5.2"
tokio-tungstenite = "0.26.2"
axum = { version = "0.8.4", features = ["ws"] }


utility-helpers = { path = "../utility-helpers" }
